# pwn-solver

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: cli.py  core.py  planner.py  prompts.py  tools.py
agent/knowledge/: playbooks.md  pwn_notes.md  system_intro.md  system_playbooks.md  system_prompt.md  system_rules.md
agent/mcp_servers/: __init__.py
agent/mcp_servers/dynamic_analysis/: __init__.py  gdb_session.py  server.py
agent/mcp_servers/exploit_tools/: __init__.py  ghidra_decompile.py  runner.py  server.py
agent/mcp_servers/exploit_tools/ghidra_scripts/: DecompileFunctions.py  __init__.py
configs/: default.yaml
mcp-servers/dynamic-analysis/: gdb_session.py  server.py
mcp-servers/exploit-tools/: runner.py  server.py
mcp-servers/exploit-tools/ghidra_scripts/: DecompileFunctions.py
scripts/: fsop_starshard_solve.py
tests/: __init__.py  conftest.py  mcp_loader.py  test_agent_context.py  test_agent_sanitize.py  test_bootstrap_ghidra.py  test_ghidra_decompile.py  test_mcp_dynamic.py  test_mcp_exploit.py  test_packaged_mcp_imports.py  test_planner.py
tests/challenges/: Makefile  format_read.c  format_write.c  fsop_starshard.c  heap_tcache_poison.c  ret2libc.c  ret2libc_pie_canary_real.c  ret2libc_real.c  ret2libc_write.c  ret2win.c  shellcode.c
